--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index",
     "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix"
@@ -57,9 +58,12 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^6.0.4",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^4.3.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.6",
@@ -67,5 +71,14 @@
     "terser-webpack-plugin": "^4.2.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "jest":{
+    "setupFilesAfterEnv":[
+      "<rootDir>/src/frontend/__test__/setupTest.js"
+    ],
+    "moduleNameMapper":{
+      "\\.(jpg|jpeg|png|gif)$":"<rootDir>/src/frontend/__mocks__/fileMock.js",
+      "\\.(scss|css|sass)$":"<rootDir>/scr/frontend/__mocks__/styleMock.js"
+    }
   }
 }
