--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:watch": "jest --watch",
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index",
-    "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix"
+    "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix",
+    "test:coverage":"jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -74,6 +75,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "jest": {
+    "verbose": true,
     "setupFilesAfterEnv": [
       "<rootDir>/src/frontend/__test__/setupTest.js"
     ],
