--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "video",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -12,7 +12,10 @@
     "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix",
     "test:coverage": "jest --coverage"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "webpack"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -73,7 +76,8 @@
     "sass-loader": "^7.3.1",
     "terser-webpack-plugin": "^4.2.3",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "jest": {
     "verbose": true,
