--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:watch": "jest --watch",
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index",
-    "start": "node src/server/index.js",
+    "start": "node src/server/index",
     "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix",
     "test:coverage": "jest --coverage"
   },
@@ -58,7 +58,8 @@
     "webpack": "^4.41.5",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "mini-css-extract-plugin": "^0.7.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
