--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "video",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server/index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index",
-    "start": "node src/server/index",
+    "start": "node src/server/index.js",
     "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix",
     "test:coverage": "jest --coverage"
   },
@@ -19,16 +19,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@babel/register": "^7.12.1",
     "@babel/core": "^7.12.3",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "babel-loader": "^8.0.6",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/register": "^7.12.1",
     "@hapi/boom": "^9.1.0",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.21.0",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -41,8 +41,8 @@
     "helmet": "^3.21.2",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
-    "nodemon": "^2.0.6",
     "md5": "^2.2.1",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "prop-types": "^15.7.2",
@@ -56,14 +56,13 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "mini-css-extract-plugin": "^0.7.0"
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^6.0.4",
+    "compression-webpack-plugin": "^6.0.5",
     "css-loader": "^3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -71,11 +70,11 @@
     "eslint-loader": "^4.0.2",
     "file-loader": "^4.3.0",
     "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.13.1",
     "react-test-renderer": "^17.0.1",
     "sass-loader": "^7.3.1",
     "terser-webpack-plugin": "^4.2.3",
-    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "webpack-manifest-plugin": "^2.2.0"
   },
